--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ contourpy==1.3.1
 cycler==0.12.1
 decorator==4.4.2
 deepface==0.0.79
-dlib==19.24.6
+dlib-binary==19.24.1
 face-recognition==1.3.0
 face_recognition_models==0.3.0
 facenet-pytorch==2.6.0
