--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.43.0
-opencv-python-headless==4.11.0.86
+opencv-python==4.11.0.86
 Pillow==10.2.0
 torch==2.2.2
 torchvision==0.17.2
@@ -8,3 +8,4 @@ numpy==1.26.4
 facenet-pytorch==2.6.0
 dlib-binary==19.21.99
 face-recognition==1.3.0
+face_recognition_models==0.3.0
